[gd_scene load_steps=5 format=2]

[ext_resource path="res://SceneComponent/FolderPathHandler/FolderPath.tscn" type="PackedScene" id=1]
[ext_resource path="res://SceneComponent/GDFileParser/GDFileParser.tscn" type="PackedScene" id=2]
[ext_resource path="res://Trees/Main_Scene/MainScene.gd" type="Script" id=3]
[ext_resource path="res://SceneComponent/RecursiveFileLoader/RecursiveFileLoader.tscn" type="PackedScene" id=4]

[node name="Root" type="VBoxContainer"]
anchor_left = 0.08
anchor_top = 0.2
anchor_right = 0.92
anchor_bottom = 0.3
grow_horizontal = 2
grow_vertical = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FolderPathHandler" parent="." instance=ExtResource( 1 )]
anchor_bottom = 0.0
margin_right = 860.0
margin_bottom = 60.0

[node name="DocLoader" parent="." instance=ExtResource( 2 )]

[node name="RecursiveGDFileGetter" parent="." instance=ExtResource( 4 )]
[connection signal="path_confirmed" from="FolderPathHandler" to="." method="_path_confirmed"]
